language/move-lang/tests/move_check/expansion/duplicate_abilities.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_abilities.move:4:26
  │
4 │     struct Foo has copy, copy {}
  │                    ----  ^^^^ Duplicate 'copy' ability modifier
  │                    │      
  │                    Ability previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_abilities.move:5:26
  │
5 │     struct Bar<T: drop + drop> { f: T }
  │                   ----   ^^^^ Duplicate 'drop' ability constraint
  │                   │       
  │                   Ability previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_abilities.move:6:24
  │
6 │     fun baz<T: store + store>() {}
  │                -----   ^^^^^ Duplicate 'store' ability constraint
  │                │        
  │                Ability previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_abilities.move:9:28
  │
9 │         invariant<T: key + key> exists<T>(0x1) == exists<T>(0x1);
  │                      ---   ^^^ Duplicate 'key' ability constraint
  │                      │      
  │                      Ability previously given here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/duplicate_abilities.move:10:26
   │
10 │         axiom<T: store + store + key + key> exists<T>(0x2);
   │                  -----   ^^^^^ Duplicate 'store' ability constraint
   │                  │        
   │                  Ability previously given here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/duplicate_abilities.move:10:40
   │
10 │         axiom<T: store + store + key + key> exists<T>(0x2);
   │                                  ---   ^^^ Duplicate 'key' ability constraint
   │                                  │      
   │                                  Ability previously given here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/duplicate_abilities.move:15:23
   │
15 │     fun main<T: key + key>() {}
   │                 ---   ^^^ Duplicate 'key' ability constraint
   │                 │      
   │                 Ability previously given here

